<resources>
    <string name="app_name">Hello Notes</string>
    <string name="my_notes">Hello Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here..</string>
    <string name="miscellenous">Miscllenous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note ?</string>
    <string name="delete">DELETE</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="delete_note">Delete Note</string>

    <string name="defaultt">Default</string>
    <string name="large">Large</string>
    <string name="small">"Small "</string>
    <string name="list">List</string>
    <string name="noting_to_show">Nothing to show</string>
    <string name="todo">To Do</string>
    <string name="task_title">Task Title</string>
    <string name="type_description_here">Type description here..</string>
    <string name="task_subtitle">Task Subtitle</string>
    <string name="reset">Reset</string>
    <string name="_0">0</string>
</resources>