<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acitivities.todo_activity"
    android:background="@color/colorPrimary"
    >
    <TextView
        android:id="@+id/textTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:includeFontPadding="false"
        android:text="@string/todo"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <LinearLayout
        android:id="@+id/reset_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/todoRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTodo">
        <TextView
            android:id="@+id/text_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorWhite"
         >
        </TextView>

        <ImageView
            android:id="@+id/resetArrow"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_reset"
            app:tint="@color/colorWhite"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            >
        </ImageView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todoRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintBottom_toTopOf="@id/LayoutQuickAction"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/textTodo"
        >
    </androidx.recyclerview.widget.RecyclerView>
        <LinearLayout
            android:id="@+id/LayoutQuickAction"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@id/todoRecyclerView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorQuickActionBackground"
            android:orientation="horizontal">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/taskCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="30dp"
                    android:text="0"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    <ImageView
        android:id="@+id/imageAddTask"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_add_task"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorWhite">
    </ImageView>
</androidx.constraintlayout.widget.ConstraintLayout>