<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellenous"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellenous"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/text_Miscellenous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellenous"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        >


    </TextView>

    <TextView
        android:id="@+id/text_pickColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_color"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="@dimen/_10sdp"
        >
    </TextView>


    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/color_pick_1"
                > </View>

            <ImageView
                android:id="@+id/Color1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite"
                android:contentDescription="@string/app_name">

            </ImageView>
            
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/color_pick_2"
                > </View>

            <ImageView
                android:id="@+id/Color2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite"
                android:contentDescription="@string/app_name">

            </ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/color_pick_9"
                > </View>

            <ImageView
                android:id="@+id/Color3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite"
                android:contentDescription="@string/app_name">

            </ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/color_pick_7"
                > </View>

            <ImageView
                android:id="@+id/Color4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite"
                android:contentDescription="@string/app_name">

            </ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/color_pick_5"
                > </View>

            <ImageView
                android:id="@+id/Color5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite"
                android:contentDescription="@string/app_name">

            </ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color6"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/color_pick_6"
                > </View>

            <ImageView
                android:id="@+id/Color6"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite"
                android:contentDescription="@string/app_name">

            </ImageView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color7"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/color_pick_4"
                > </View>

            <ImageView
                android:id="@+id/Color7"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite"
                android:contentDescription="@string/app_name">

            </ImageView>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        >
       <ImageView
           android:layout_width="@dimen/_25sdp"
           android:layout_height="@dimen/_25sdp"
           android:contentDescription="@string/app_name"
           android:src="@drawable/ic_image"
           app:tint="@color/colorIcons"
           > </ImageView>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_10sdp"

            >
        </TextView>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/_10sdp"
       android:layout_marginEnd="@dimen/_10sdp"
        >
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            app:tint="@color/colorIcons"
            > </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_10sdp"
            >
        </TextView>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/color7"
            > </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textColor="@color/color7"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_10sdp"
            >
        </TextView>


    </LinearLayout>



</LinearLayout>